# docs/_generated/openapi/services/project-service/openapi.yaml
@@ -241,12 +241,6 @@ components:
           readOnly: true
           type: string
           description: Output only. System-assigned stable unique identifier for the project.
-        displayName:
-          type: string
-          description: Optional. Human-readable display name of the project.
-        description:
-          type: string
-          description: Optional. Description of the project.
         state:
           readOnly: true
           enum:
@@ -260,6 +254,12 @@ components:
           type: string
           description: Output only. Server-computed lifecycle state of the project.
           format: enum
+        displayName:
+          type: string
+          description: Optional. Human-readable display name of the project.
+        description:
+          type: string
+          description: Optional. Description of the project.
         createTime:
           readOnly: true
           type: string
@@ -270,6 +270,21 @@ components:
           type: string
           description: Output only. Time when the project was most recently updated.
           format: date-time
+        deleteTime:
+          readOnly: true
+          type: string
+          description: Output only. Time when the project was soft-deleted.
+          format: date-time
+        purgeTime:
+          readOnly: true
+          type: string
+          description: Output only. Time when the soft-deleted project is scheduled to be purged.
+          format: date-time
+        etag:
+          type: string
+          description: |-
+            The etag for this project.
+             If this is provided on update or delete, it must match the server's etag.
         annotations:
           type: object
           additionalProperties:
